--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button id="scissor">scissor</button>
+    <button class="rock">rock</button>
+    <button class="paper">paper</button>
+    <button class="scissor">scissor</button>
+
+    <div class='result'></div>
 
     <script src="/main.js"></script>
 </body>
