Score counter added as well as game reset when any score get's to 5

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <button class="scissor">scissor</button>
 
     <div class='result'></div>
+    <div class='scores'></div>
 
     <script src="/main.js"></script>
 </body>
